--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.4",
+    "@mui/material": "^7.3.4",
+    "lucide-react": "^0.546.0",
     "next": "15.5.5",
     "next-intl": "^4.3.12",
     "react": "19.1.0",
